<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/register"
    tools:context="com.example.user_13.libraryapp.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameET"
                android:background="@color/colorWhite"
                android:textColorHint="@color/colorBlack"
                android:layout_alignParentTop="true"
                android:hint="@string/type_desireble_username_here"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameET"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:textColorHint="@color/colorBlack"
                android:hint="@string/your_name"
                android:id="@+id/nameET"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordET1"
                android:layout_below="@id/nameET"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:background="@color/colorWhite"
                android:textColorHint="@color/colorBlack"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordET1"
                android:id="@+id/passwordET2"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:background="@color/colorWhite"
                android:textColorHint="@color/colorBlack"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailET"
                android:layout_below="@+id/passwordET2"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@color/colorWhite"
                android:textColorHint="@color/colorBlack"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registrationButton"
                android:layout_below="@+id/emailET"
                android:layout_centerHorizontal="true"
                android:text="@string/register"
                />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
